# kanban-mcp

./: .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml
crates/kanban-lint/: Cargo.toml
crates/kanban-lint/src/: lib.rs
crates/kanban-mcp/: Cargo.toml
crates/kanban-mcp/src/: lib.rs  main.rs
crates/kanban-mcp/tests/: full_flow.rs
crates/kanban-model/: Cargo.toml
crates/kanban-model/src/: lib.rs
crates/kanban-render/: Cargo.toml
crates/kanban-render/src/: lib.rs
crates/kanban-storage/: Cargo.toml
crates/kanban-storage/src/: lib.rs
docs/: README.md
docs/api/: api-spec.md
docs/architecture/: domain-model.md  mcp-design.md  relations.md  sequences.md
docs/configuration/: storage.md
docs/features/: notes.md
docs/getting-started/: overview.md
docs/integrations/: codex-cli.md
docs/operations/: performance-scaling.md  security-ops.md
docs/project/: roadmap.md
docs/reference/: cli.md  references.md
docs/style/: tool-style.md
scripts/: e2e_codex.sh
