[workspace]
members = [
  "crates/kanban-model",
  "crates/kanban-storage",
  "crates/kanban-lint",
  "crates/kanban-render",
  "crates/kanban-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sifi <sifyfy@sifyfy.dev>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.5"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
ulid = { version = "1", features = ["serde"] }
regex = "1"
once_cell = "1"
fs-err = "3.1.1"
walkdir = "2"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
notify = "8.2.0"
slug = "0.1.5"
comrak = "0.41.0"
handlebars = "6.3.2"
tempfile = "3.22.0"
similar = "2"
