[package]
name = "kanban-mcp"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
kanban-render = { path = "../kanban-render" }
kanban-model = { path = "../kanban-model" }
kanban-storage = { path = "../kanban-storage" }
kanban-lint = { path = "../kanban-lint" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fs-err = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
time = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
