[package]
name = "kanban-model"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
slug = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
similar = { workspace = true }
